--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "avxg-server",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "nodemon index.js",
+    "dev-serve":"nodemon index.js",
+    "serve": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
